Prevent webtiles game body from scrolling
This prevents webtiles menu scrolling affecting the game window in the
background, which looks odd.

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    overflow: hidden;
 }
 
 #lobby {
